# swerve_transport_project

./: .gitignore  CAMERA_NOTES.md  CLAUDE.md  HANDOFF_TO_TAN.md  INVESTIGATION.md  LOCALIZATION_RUN_LAPTOP.md  MAPPING_RUN_GUIDE.md  MAPPING_RUN_LAPTOP.md  MAPPING_RUN_PI.md  MAP_TO_LOCALIZE.md  MARKERLESS_DEMO_RUNBOOK.md  README.md  RTAB_SESSION_SUMMARY.md  TIER1_NOTES.md
docs/path_planning/: NAVIGATION_PIPELINE.md  README.md  RUNBOOK.md
interface/: DEMO_RUNBOOK.md  NAVIGATION_PIPELINE.md  PROCESSING_PIPELINE.md  README.md  RUN_LOCALIZATION_VIEWER.md  ReadMe.md  astar_planner.py  clean_map.py  db_to_map_json.py  depth_check.py  fake_pose_publisher.py  fastdds_peers.xml.example  index.html  inpaint_floor.py  loc_doctor.py  map.json  map_to_obstacles.py  mock_ros_bridge.py  obj_to_map_json.py  path_plan.json  path_viewer.html  ply_to_map_json.py  post_align.py  preprocess.py  regenerate_map.sh  ros_pose_bridge.py  run_test.sh  server.py  sim_navigator.py  test_server_endpoints.py
mocap_test/: README.md  trajectory_publisher.py
mocap_test/launch/: mocap_formation.launch.py
ros2_ws/src/turtlebot3_conveyor_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/turtlebot3_conveyor_bridge/launch/: bringup.launch.py  teleop.launch.py
ros2_ws/src/turtlebot3_conveyor_bridge/turtlebot3_conveyor_bridge/: serial_bridge_node.py  teleop_keyboard_node.py  test_robot.py
scripts/: drive_box.py  inject_initialpose.py
tools/: README.md  demo_aliases.sh  deploy.sh  inspect_rtabmap_db.py  nav_watch.py  odom_watch.py  preflight.sh  teleop_twist_keyboard.py  test_obstacle_logic.py
(+50 files in other folders)
