<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_conveyor_bridge</name>
  <version>0.1.0</version>
  <description>
    ROS 2 serial bridge and keyboard teleop for the TurtleBot3 Conveyor
    8-motor swerve/holonomic drive. Translates geometry_msgs/Twist commands
    into serial ASCII characters for the OpenCR firmware.
  </description>

  <maintainer email="student@example.com">Seven</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
